--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@
     font-weight: 500;
     line-height: 150%;
 }
+.semi-bold{
+    color: #FFFFFF;
+    font-size: 3.625rem;
+    font-weight: 600;
+}
 .border {
     color: #1C1C21;
 }
@@ -27,13 +32,22 @@ body {
 }
 
 .container {
-    max-width: 86.98%;
+    max-width: 83.125%;
     margin: 0px auto;
 }
+.border{
+    border: 1px solid #1C1C21;
+}
+.text-tranform{
+    text-transform: uppercase;
+}
+
 .nav-section{
     border-bottom: 1px solid #1C1C21;
 }
 nav {
+    max-width: 86.98%;
+    margin: 0px auto;
     display: flex;
     padding: 30px 40px;
     border-right: 1px solid #1C1C21;
@@ -75,4 +89,61 @@ nav ul li a {
     padding: 16px 24px;
     border: none;
     border-radius: 10px;
+}
+
+
+.banner-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 90px 0px;
+    background-image: url(../images/Abstract_Design.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+}
+.banner-info .first-title #banner-small-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #62646C;
+    text-transform: uppercase;
+}
+.banner-info .first-title #banner-big-title{
+    font-size: 5rem;
+    font-weight: 600;
+    color: #E5E5E7;
+    text-transform: uppercase;
+}
+.banner-info .second-title #banner-right-small-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #62646C;
+    text-transform: uppercase;
+}
+.second-title-info{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.banner-btn{
+    background-color: #4A2CED;
+    padding: 18px 50px;
+    border-radius: 100px;
+    border: none;
+    font-size: 1.8rem;
+}
+
+.banner-icons-container{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.banner-icons{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.icon-text{
+    color: #D7D0FB;
 }
