--- a/styles/style.css
+++ b/styles/style.css
@@ -12,20 +12,28 @@
     margin: 0;
     box-sizing: border-box;
 }
-.medium-font{
+
+.medium-font {
     font-size: 1.1rem;
     font-weight: 500;
     line-height: 150%;
 }
-.semi-bold{
+
+.semi-bold {
     color: #FFFFFF;
     font-size: 3.625rem;
     font-weight: 600;
 }
-.semi-bold-sm{
+
+.semi-bold-sm {
     font-size: 1.25rem;
     font-weight: 600;
     color: #797C86;
+}
+.regular-font{
+    color: #AFB0B6;
+    font-size: 1.125;
+    line-height: 150%;
 }
 .border {
     color: #1C1C21;
@@ -40,20 +48,23 @@ body {
     max-width: 83.125%;
     margin: 0px auto;
 }
-.border{
+
+.border {
     border: 1px solid #1C1C21;
 }
-.text-tranform{
+
+.text-tranform {
     text-transform: uppercase;
 }
 
-.margin-bottom{
+.margin-bottom {
     margin-bottom: 200px;
 }
 
-.nav-section{
+.nav-section {
     border-bottom: 1px solid #1C1C21;
 }
+
 nav {
     max-width: 86.98%;
     margin: 0px auto;
@@ -64,9 +75,11 @@ nav {
     align-items: center;
     justify-content: space-between;
 }
-.nav-img img{
+
+.nav-img img {
     width: 100%;
 }
+
 nav ul {
     display: flex;
     align-items: flex-end;
@@ -82,17 +95,20 @@ nav ul li {
     border-top-left-radius: 15px;
     background-color: #131316;
 }
+
 #curve2 {
     border: 1px solid #1C1C21;
     border-top-right-radius: 15px;
 }
+
 nav ul li a {
     border: 1px solid #1C1C21;
     padding: 30px 50px;
     text-decoration: none;
     color: #AFB0B6;
 }
-.nav-btn button{
+
+.nav-btn button {
     color: #ffffff;
     background-color: #131316;
     padding: 16px 24px;
@@ -101,7 +117,7 @@ nav ul li a {
 }
 
 
-.banner-info{
+.banner-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -111,30 +127,35 @@ nav ul li a {
     background-position: center;
     width: 100%;
 }
-.banner-info .first-title #banner-small-title{
+
+.banner-info .first-title #banner-small-title {
     font-size: 1.3rem;
     font-weight: 500;
     color: #62646C;
     text-transform: uppercase;
 }
-.banner-info .first-title #banner-big-title{
+
+.banner-info .first-title #banner-big-title {
     font-size: 5rem;
     font-weight: 600;
     color: #E5E5E7;
     text-transform: uppercase;
 }
-.banner-info .second-title #banner-right-small-title{
+
+.banner-info .second-title #banner-right-small-title {
     font-size: 1.3rem;
     font-weight: 500;
     color: #62646C;
     text-transform: uppercase;
 }
-.second-title-info{
+
+.second-title-info {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.banner-btn{
+
+.banner-btn {
     background-color: #4A2CED;
     padding: 18px 50px;
     border-radius: 100px;
@@ -142,27 +163,81 @@ nav ul li a {
     font-size: 1.8rem;
 }
 
-.banner-icons-container{
+.banner-icons-container {
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.banner-icons{
+
+.banner-icons {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.icon-text{
+
+.icon-text {
     color: #D7D0FB;
 }
-
 .banner-cover-container img{
     width: 100%;
 }
-
-.about-short{
+.about-short {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 50px;
 }
+
+.short-info-btn {
+    display: flex;
+    align-items: center;
+}
+
+.short-info-btn button {
+    background-color: #1C1C21;
+    color: #FFFFFF;
+    padding: 16px 24px;
+    border: none;
+    border-radius: 10px;
+}
+.line{
+    margin-bottom: 80px;
+}
+
+.about-cover{
+    grid-area: coverArea;
+}
+.about-info{
+    grid-area: aboutArea;
+}
+.about-information{
+    display: grid;
+    gap: 30px;
+    align-items: center;
+    grid-template-areas: 
+    'coverArea aboutArea'
+    ;
+}
+.introduction{
+    padding: 40px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.introduction h5{
+    margin-bottom: 20px;
+}
+.introduction p{
+    text-align: justify;
+}
+.h5-font{
+    font-size: 1.875rem;
+    color: #CACACE;
+    font-weight: 500;
+}
+
+.contact{
+    display: flex;
+    gap: 128px;
+}
+
